HVAC Backup 2/objects/CSV_Uploading_Mapping__mdt(1).object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Column_Name__c</fullName>
        <label>Column Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Type__c</fullName>
        <label>Field Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                    <default>true</default>
                    <label>Text</label>
                </value>
                <value>
                    <fullName>Decimal</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Integer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_CSV_Mapping__c</fullName>
        <label>Parent CSV Mapping</label>
        <referenceTo>Parent_CSV_Mapping__mdt</referenceTo>
        <relationshipLabel>CSV Uploading Mappings</relationshipLabel>
        <relationshipName>CSV_Uploading_Mappings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>CSV Uploading Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Column_Name__c</columns>
        <columns>Field_API_Name__c</columns>
        <columns>Field_Type__c</columns>
        <columns>Active__c</columns>
        <columns>Is_Required__c</columns>
        <columns>Parent_CSV_Mapping__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>CSV Uploading Mappings</pluralLabel>
</CustomObject>